# universal-adaptive-black-box

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
benchmarks/: README.md  datasets.py  run_benchmarks.py
benchmarks/results/: example_results.csv
docs/: migration-v0.1-to-v0.2.md
examples/: README.md  basic_workflow.py  constrained_inverse_design.py  linear_baseline.py  multi_output.py  pareto_design.py  uncertainty_ood_active_learning.py
src/: __init__.py  core_engine.py  data_loader.py  forward_solver.py  inverse_solver.py  metrics.py  validation.py
src/adaptive_surrogate/: __init__.py  active_learning.py  core_engine.py  data_loader.py  explainability.py  forward_solver.py  inverse_solver.py  lifecycle.py  metrics.py  orchestration.py  pareto.py  validation.py
tests/: test_active_learning_pareto.py  test_artifacts.py  test_conformal.py  test_data_loader.py  test_explainability.py  test_inverse_solver.py  test_lifecycle.py  test_metrics.py  test_monitoring.py  test_nested_validation.py  test_orchestration.py  test_pareto_solver.py  test_schema_metadata.py  test_search_modes.py  test_single_output.py  test_uncertainty_ood.py  test_validation.py
