[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numerical-surrogate-toolkit"
version = "0.3.0"
description = "Numerical surrogate modeling with forward prediction and bounded inverse design."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "numpy>=1.24,<2",
  "scipy>=1.10,<2",
  "scikit-learn>=1.3,<2",
  "torch>=2.0,<3",
]

[project.optional-dependencies]
excel = ["pandas>=2.0,<4", "openpyxl>=3.1,<4", "xlrd>=2.0.1,<3"]
dev = ["build>=1.2", "mypy>=1.10", "pytest>=8", "pytest-cov>=5", "ruff>=0.6"]
all = ["numerical-surrogate-toolkit[excel,dev]"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["adaptive_surrogate*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/__init__.py" = ["F403"]
"src/core_engine.py" = ["F403"]
"src/data_loader.py" = ["F403"]
"src/forward_solver.py" = ["F403"]
"src/inverse_solver.py" = ["F403"]
"src/metrics.py" = ["F403"]
"src/validation.py" = ["F403"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["src/adaptive_surrogate"]
